--- a/app/src/main/res/layout/sheet_info.xml
+++ b/app/src/main/res/layout/sheet_info.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/sheet_info"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,127 +8,133 @@
     android:padding="16dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
-    <TextView
-        android:id="@+id/lbl_type"
+    <RelativeLayout
+        android:id="@+id/grp_lbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Type:"
-        android:textAlignment="textStart"
+        app:layout_constraintBottom_toTopOf="@id/grp_btn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/txt_type"
+        <TextView
+            android:id="@+id/lbl_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="Type:"
+            android:textAlignment="textStart" />
+
+        <TextView
+            android:id="@+id/lbl_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/lbl_type"
+            android:padding="8dp"
+            android:text="Description:" />
+
+        <TextView
+            android:id="@+id/lbl_reported"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/lbl_description"
+            android:padding="8dp"
+            android:text="Reported at:" />
+
+        <TextView
+            android:id="@+id/lbl_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/lbl_reported"
+            android:padding="8dp"
+            android:text="Location:" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/grp_txt"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Hedgehog"
-        android:textAlignment="textStart"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/lbl_type"
-        app:layout_constraintStart_toEndOf="@+id/lbl_reported" />
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="@id/grp_btn"
+        app:layout_constraintStart_toEndOf="@id/grp_lbl"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/lbl_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Description:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lbl_type" />
+        <TextView
+            android:id="@+id/txt_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="Hedgehog"
+            android:textAlignment="textStart"
+            android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/txt_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txt_type"
+            android:padding="8dp"
+            android:text="A squashed hedgehog next to the road"
+            android:textAlignment="textStart"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/txt_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="A squashed hedgehog next to the road"
-        android:textAlignment="textStart"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/lbl_description"
-        app:layout_constraintStart_toEndOf="@+id/lbl_reported" />
+        <TextView
+            android:id="@+id/txt_reported"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txt_description"
+            android:padding="8dp"
+            android:text="02.11.2019 15:30:03"
+            android:textAlignment="textStart"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/lbl_reported"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Reported at:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lbl_description" />
+        <TextView
+            android:id="@+id/txt_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txt_reported"
+            android:padding="8dp"
+            android:text="Eferdinger Str. 2, 4020 Linz, Austria"
+            android:textAlignment="textStart"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
-
-    <TextView
-        android:id="@+id/txt_reported"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="02.11.2019 15:30:03"
-        android:textAlignment="textStart"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/lbl_reported"
-        app:layout_constraintStart_toEndOf="@id/lbl_reported" />
-
-    <TextView
-        android:id="@+id/lbl_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Location:"
-        app:layout_constraintBottom_toTopOf="@id/btn_show_picture"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lbl_reported" />
-
-
-    <TextView
-        android:id="@+id/txt_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Eferdinger Str. 2, 4020 Linz, Austria"
-        android:textAlignment="textStart"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/lbl_location"
-        app:layout_constraintStart_toEndOf="@+id/lbl_reported" />
-
-    <Button
-        android:id="@+id/btn_show_picture"
+    <RelativeLayout
+        android:id="@+id/grp_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Show picture"
-        app:layout_constraintBottom_toTopOf="@+id/btn_remove"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lbl_location" />
-
-    <Button
-        android:id="@+id/btn_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent" />
-
-    <Button
-        android:id="@+id/btn_remove"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Remove"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/grp_lbl">
 
+        <Button
+            android:id="@+id/btn_show_picture"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Show picture" />
 
-    <Button
-        android:id="@+id/btn_report"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Report"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="parent" />
+        <Button
+            android:id="@+id/btn_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_show_picture"
+            android:text="Edit" />
+
+        <Button
+            android:id="@+id/btn_remove"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_show_picture"
+            android:layout_centerHorizontal="true"
+            android:text="Remove" />
+
+        <Button
+            android:id="@+id/btn_report"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_show_picture"
+            android:layout_alignParentEnd="true"
+            android:text="Report" />
+    </RelativeLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
