--- a/app/src/main/res/layout/image_view.xml
+++ b/app/src/main/res/layout/image_view.xml
@@ -5,10 +5,11 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:contentDescription="Dead animal"
         android:scaleType="fitXY"
-        android:adjustViewBounds="true"
         android:src="@drawable/dead" />
 </LinearLayout>
