--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="12dp"
-        android:text="Eferdinger Str. 2, 4020 Linz, Austria"
+        android:text="N/A"
         android:textAlignment="textStart"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/lbl_time"
